--- a/_sources/index.yaml
+++ b/_sources/index.yaml
@@ -3,7 +3,7 @@ lang: sr-Cyrl
 title: Области примене савременог рачунарства за четврти разред гимназије природни смер
 description:
   longDescription: |
-    Овај курс је намењен ученицима четвртог разреда гимназија природно-математичког смера за предмет Рачунарство и информатика. Курс прати одговарајући програм наставе и учења.
+    Овај курс је намењен ученицима четвртог разреда гимназија свих смерова за предмет Рачунарство и информатика. Курс прати одговарајући програм наставе и учења.
 
     <p>
     <a rel="license" href="https://creativecommons.org/licenses/by/4.0/deed.sr_LATN">
