--- a/_sources/index.yaml
+++ b/_sources/index.yaml
@@ -1,6 +1,7 @@
 courseId: kurs_gim4_savremeno_racunarstvo
 lang: sr-Cyrl
 title: Области примене савременог рачунарства за четврти разред гимназије природни смер
+nav_link: https://petlja.org/kurs/7193/
 description:
   longDescription: |
     Овај курс је намењен ученицима четвртог разреда гимназија свих смерова за предмет Рачунарство и информатика. Курс прати одговарајући програм наставе и учења у делу који се односи на тему "Области примене савременог рачунарства", а која се обично обрађује на крају школске године. Првенствени циљ изучавања ове теме је стицање опште културе, па дато градиво треба схватити пре свега као информативно, односно као основу за разговор и размену искустава. Након летимичног упознавања са садржајем, курс може да послужи и као полазна тачка за детаљнију обраду неких од описаних области примене рачунарства. Уколико се неке изабране области обрађују групно, садржај курса може да се комбинује са другим, повезаним материјалима на интернету.
