small update, new images

--- a/_sources/index.yaml
+++ b/_sources/index.yaml
@@ -4,7 +4,7 @@ title: Области примене савременог рачунарства
 nav_link: https://petlja.org/kurs/7193/
 description:
   longDescription: |
-    Овај курс је намењен ученицима четвртог разреда гимназија свих смерова за предмет Рачунарство и информатика. Курс прати одговарајући програм наставе и учења у делу који се односи на тему "Области примене савременог рачунарства", а која се обично обрађује на крају школске године. Првенствени циљ изучавања ове теме је стицање опште културе, па дато градиво треба схватити пре свега као информативно, односно као основу за разговор и размену искустава. Након летимичног упознавања са садржајем, курс може да послужи и као полазна тачка за детаљнију обраду неких од описаних области примене рачунарства. Уколико се неке изабране области обрађују групно, садржај курса може да се комбинује са другим, повезаним материјалима на интернету.
+    Овај курс је намењен ученицима четвртог разреда гимназија свих смерова за предмет Рачунарство и информатика. Курс прати одговарајући програм наставе и учења у делу који се односи на тему „Области примене савременог рачунарства“, а која се обично обрађује на крају школске године. Првенствени циљ изучавања ове теме је стицање опште културе, па дато градиво треба схватити пре свега као информативно, односно као основу за разговор и размену искустава. Након летимичног упознавања са садржајем, курс може да послужи и као полазна тачка за детаљнију обраду неких од описаних области примене рачунарства. Уколико се неке изабране области обрађују групно, садржај курса може да се комбинује са другим, повезаним материјалима на интернету.
 
     <p>
     <a rel="license" href="https://creativecommons.org/licenses/by/4.0/deed.sr_LATN">
@@ -14,13 +14,13 @@ description:
 
   shortDescription: Примене савременог рачунарства
   willLearn:
-    - Шта је интернет ствари, које су његове типичне примене и како он може да побољша живот у градовима
-    - Чиме се све бави вештачка интелигенција и какве ризике и дилеме са собом носи
-    - Који видови мaшинског учења постоје и какве проблеме решавају
-    - Шта је big data и у каквој је вези са науком о подацима
-    - које су особине савремених робота, од чега се роботи састоје и за шта се све користе
-    - Шта је криптовање, како се корсити криптовање помоћу јавног и тајног кључа, шта је хеширање, који су задаци модерне криптографије и како се они остварују употребном поменутих техника криптовања и хеширања
-    - Шта су квантни рачунари, на којим принципима функционишу, које су њихове предности и могуће примене
+    - шта је интернет ствари, које су његове типичне примене и како он може да побољша живот у градовима;
+    - ћиме се све бави вештачка интелигенција и какве ризике и дилеме са собом носи;
+    - који видови мaшинског учења постоје и какве проблеме решавају;
+    - шта је big data и у каквој је вези са науком о подацима;
+    - које су особине савремених робота, од чега се роботи састоје и за шта се све користе;
+    - шта је криптовање, како се корсити криптовање помоћу јавног и тајног кључа, шта је хеширање, који су задаци модерне криптографије и како се они остварују употребном поменутих техника криптовања и хеширања;
+    - шта су квантни рачунари, на којим принципима функционишу, које су њихове предности и могуће примене.
   requirements:
     - Интернет прегледач (браузер)
   toc:
